# FNAF-2-SDL2-edition

./: LICENSE  README.md
XBOX.Suport/: README_xbox.md
android/: AndroidManifest.xml  CMakeLists.txt  IMPORTANT.md  build.gradle
android/res/: Read.md
docs/: AI_ANIMATRONICS_GUIDE.md
src/: ai_system.c  ai_system.h  assets.c  renderer.h
